# rune-aoc

./: Cargo.toml  README.md
src/: rune.rs  rust.rs
src/scripts/: aoc_2022_1_1.rn
